qt/quick/gen_qquickitem.h

typedef struct QJSValue QJSValue;
typedef struct QObject QObject;
typedef struct QPointF QPointF;
typedef struct QQuickItem QQuickItem;
typedef struct QQuickWindow QQuickWindow;
typedef struct QRectF QRectF;
typedef struct QSGTextureProvider QSGTextureProvider;
typedef struct QSize QSize;
typedef struct QTransform QTransform;
typedef struct QVariant QVariant;
void QQuickItem_unsetCursor(QQuickItem* self);
bool QQuickItem_isUnderMouse(const QQuickItem* self);
void QQuickItem_grabMouse(QQuickItem* self);
void QQuickItem_ungrabMouse(QQuickItem* self);
bool QQuickItem_keepMouseGrab(const QQuickItem* self);
void QQuickItem_setKeepMouseGrab(QQuickItem* self, bool keepMouseGrab);
bool QQuickItem_filtersChildMouseEvents(const QQuickItem* self);
void QQuickItem_setFiltersChildMouseEvents(QQuickItem* self, bool filter);
void QQuickItem_grabTouchPoints(QQuickItem* self, struct miqt_array /* of int */  ids);
void QQuickItem_ungrabTouchPoints(QQuickItem* self);
bool QQuickItem_keepTouchGrab(const QQuickItem* self);
void QQuickItem_setKeepTouchGrab(QQuickItem* self, bool keepTouchGrab);
bool QQuickItem_grabToImage(QQuickItem* self, QJSValue* callback);
bool QQuickItem_contains(const QQuickItem* self, QPointF* point);
QObject* QQuickItem_containmentMask(const QQuickItem* self);
void QQuickItem_setContainmentMask(QQuickItem* self, QObject* mask);
QTransform* QQuickItem_itemTransform(const QQuickItem* self, QQuickItem* param1, bool* param2);
QPointF* QQuickItem_mapToItem(const QQuickItem* self, QQuickItem* item, QPointF* point);
QPointF* QQuickItem_mapToScene(const QQuickItem* self, QPointF* point);
QPointF* QQuickItem_mapToGlobal(const QQuickItem* self, QPointF* point);
QRectF* QQuickItem_mapRectToItem(const QQuickItem* self, QQuickItem* item, QRectF* rect);
QRectF* QQuickItem_mapRectToScene(const QQuickItem* self, QRectF* rect);
QPointF* QQuickItem_mapFromItem(const QQuickItem* self, QQuickItem* item, QPointF* point);
QPointF* QQuickItem_mapFromScene(const QQuickItem* self, QPointF* point);
QPointF* QQuickItem_mapFromGlobal(const QQuickItem* self, QPointF* point);
QRectF* QQuickItem_mapRectFromItem(const QQuickItem* self, QQuickItem* item, QRectF* rect);
QRectF* QQuickItem_mapRectFromScene(const QQuickItem* self, QRectF* rect);
void QQuickItem_polish(QQuickItem* self);
void QQuickItem_forceActiveFocus(QQuickItem* self);
void QQuickItem_forceActiveFocusWithReason(QQuickItem* self, int reason);
QQuickItem* QQuickItem_nextItemInFocusChain(QQuickItem* self);
QQuickItem* QQuickItem_childAt(const QQuickItem* self, double x, double y);
QVariant* QQuickItem_inputMethodQuery(const QQuickItem* self, int query);
bool QQuickItem_isTextureProvider(const QQuickItem* self);
QSGTextureProvider* QQuickItem_textureProvider(const QQuickItem* self);
void QQuickItem_update(QQuickItem* self);
void QQuickItem_childrenRectChanged(QQuickItem* self, QRectF* param1);
void QQuickItem_connect_childrenRectChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_baselineOffsetChanged(QQuickItem* self, double param1);
void QQuickItem_connect_baselineOffsetChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_stateChanged(QQuickItem* self, struct miqt_string param1);
void QQuickItem_connect_stateChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_focusChanged(QQuickItem* self, bool param1);
void QQuickItem_connect_focusChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_activeFocusChanged(QQuickItem* self, bool param1);
void QQuickItem_connect_activeFocusChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_activeFocusOnTabChanged(QQuickItem* self, bool param1);
void QQuickItem_connect_activeFocusOnTabChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_parentChanged(QQuickItem* self, QQuickItem* param1);
void QQuickItem_connect_parentChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_transformOriginChanged(QQuickItem* self, int param1);
void QQuickItem_connect_transformOriginChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_smoothChanged(QQuickItem* self, bool param1);
void QQuickItem_connect_smoothChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_antialiasingChanged(QQuickItem* self, bool param1);
void QQuickItem_connect_antialiasingChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_clipChanged(QQuickItem* self, bool param1);
void QQuickItem_connect_clipChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_windowChanged(QQuickItem* self, QQuickWindow* window);
void QQuickItem_connect_windowChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_childrenChanged(QQuickItem* self);
void QQuickItem_connect_childrenChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_opacityChanged(QQuickItem* self);
void QQuickItem_connect_opacityChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_enabledChanged(QQuickItem* self);
void QQuickItem_connect_enabledChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_visibleChanged(QQuickItem* self);
void QQuickItem_connect_visibleChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_visibleChildrenChanged(QQuickItem* self);
void QQuickItem_connect_visibleChildrenChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_rotationChanged(QQuickItem* self);
void QQuickItem_connect_rotationChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_scaleChanged(QQuickItem* self);
void QQuickItem_connect_scaleChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_xChanged(QQuickItem* self);
void QQuickItem_connect_xChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_yChanged(QQuickItem* self);
void QQuickItem_connect_yChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_widthChanged(QQuickItem* self);
void QQuickItem_connect_widthChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_heightChanged(QQuickItem* self);
void QQuickItem_connect_heightChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_zChanged(QQuickItem* self);
void QQuickItem_connect_zChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_implicitWidthChanged(QQuickItem* self);
void QQuickItem_connect_implicitWidthChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_implicitHeightChanged(QQuickItem* self);
void QQuickItem_connect_implicitHeightChanged(QQuickItem* self, intptr_t slot);
void QQuickItem_containmentMaskChanged(QQuickItem* self);
void QQuickItem_connect_containmentMaskChanged(QQuickItem* self, intptr_t slot);
struct miqt_string QQuickItem_tr2(const char* s, const char* c);
struct miqt_string QQuickItem_tr3(const char* s, const char* c, int n);
struct miqt_string QQuickItem_trUtf82(const char* s, const char* c);
struct miqt_string QQuickItem_trUtf83(const char* s, const char* c, int n);
void QQuickItem_setFlag2(QQuickItem* self, int flag, bool enabled);
bool QQuickItem_grabToImage22(QQuickItem* self, QJSValue* callback, QSize* targetSize);
QQuickItem* QQuickItem_nextItemInFocusChain1(QQuickItem* self, bool forward);
bool QQuickItem_override_virtual_metacall(void* self, intptr_t slot);
int QQuickItem_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QQuickItem_override_virtual_boundingRect(void* self, intptr_t slot);
QRectF* QQuickItem_virtualbase_boundingRect(const void* self);
bool QQuickItem_override_virtual_clipRect(void* self, intptr_t slot);
QRectF* QQuickItem_virtualbase_clipRect(const void* self);
bool QQuickItem_override_virtual_contains(void* self, intptr_t slot);
bool QQuickItem_virtualbase_contains(const void* self, QPointF* point);
QVariant* QQuickItem_virtualbase_inputMethodQuery(const void* self, int query);