qt/quick/gen_qquickitem.nim

proc fcQQuickItem_unsetCursor(self: pointer, ): void {.importc: "QQuickItem_unsetCursor".}
proc fcQQuickItem_isUnderMouse(self: pointer, ): bool {.importc: "QQuickItem_isUnderMouse".}
proc fcQQuickItem_grabMouse(self: pointer, ): void {.importc: "QQuickItem_grabMouse".}
proc fcQQuickItem_ungrabMouse(self: pointer, ): void {.importc: "QQuickItem_ungrabMouse".}
proc fcQQuickItem_keepMouseGrab(self: pointer, ): bool {.importc: "QQuickItem_keepMouseGrab".}
proc fcQQuickItem_setKeepMouseGrab(self: pointer, keepMouseGrab: bool): void {.importc: "QQuickItem_setKeepMouseGrab".}
proc fcQQuickItem_filtersChildMouseEvents(self: pointer, ): bool {.importc: "QQuickItem_filtersChildMouseEvents".}
proc fcQQuickItem_setFiltersChildMouseEvents(self: pointer, filter: bool): void {.importc: "QQuickItem_setFiltersChildMouseEvents".}
proc fcQQuickItem_grabTouchPoints(self: pointer, ids: struct_miqt_array): void {.importc: "QQuickItem_grabTouchPoints".}
proc fcQQuickItem_ungrabTouchPoints(self: pointer, ): void {.importc: "QQuickItem_ungrabTouchPoints".}
proc fcQQuickItem_keepTouchGrab(self: pointer, ): bool {.importc: "QQuickItem_keepTouchGrab".}
proc fcQQuickItem_setKeepTouchGrab(self: pointer, keepTouchGrab: bool): void {.importc: "QQuickItem_setKeepTouchGrab".}
proc fcQQuickItem_grabToImage(self: pointer, callback: pointer): bool {.importc: "QQuickItem_grabToImage".}
proc fcQQuickItem_contains(self: pointer, point: pointer): bool {.importc: "QQuickItem_contains".}
proc fcQQuickItem_containmentMask(self: pointer, ): pointer {.importc: "QQuickItem_containmentMask".}
proc fcQQuickItem_setContainmentMask(self: pointer, mask: pointer): void {.importc: "QQuickItem_setContainmentMask".}
proc fcQQuickItem_itemTransform(self: pointer, param1: pointer, param2: ptr bool): pointer {.importc: "QQuickItem_itemTransform".}
proc fcQQuickItem_mapToItem(self: pointer, item: pointer, point: pointer): pointer {.importc: "QQuickItem_mapToItem".}
proc fcQQuickItem_mapToScene(self: pointer, point: pointer): pointer {.importc: "QQuickItem_mapToScene".}
proc fcQQuickItem_mapToGlobal(self: pointer, point: pointer): pointer {.importc: "QQuickItem_mapToGlobal".}
proc fcQQuickItem_mapRectToItem(self: pointer, item: pointer, rect: pointer): pointer {.importc: "QQuickItem_mapRectToItem".}
proc fcQQuickItem_mapRectToScene(self: pointer, rect: pointer): pointer {.importc: "QQuickItem_mapRectToScene".}
proc fcQQuickItem_mapFromItem(self: pointer, item: pointer, point: pointer): pointer {.importc: "QQuickItem_mapFromItem".}
proc fcQQuickItem_mapFromScene(self: pointer, point: pointer): pointer {.importc: "QQuickItem_mapFromScene".}
proc fcQQuickItem_mapFromGlobal(self: pointer, point: pointer): pointer {.importc: "QQuickItem_mapFromGlobal".}
proc fcQQuickItem_mapRectFromItem(self: pointer, item: pointer, rect: pointer): pointer {.importc: "QQuickItem_mapRectFromItem".}
proc fcQQuickItem_mapRectFromScene(self: pointer, rect: pointer): pointer {.importc: "QQuickItem_mapRectFromScene".}
proc fcQQuickItem_polish(self: pointer, ): void {.importc: "QQuickItem_polish".}
proc fcQQuickItem_forceActiveFocus(self: pointer, ): void {.importc: "QQuickItem_forceActiveFocus".}
proc fcQQuickItem_forceActiveFocusWithReason(self: pointer, reason: cint): void {.importc: "QQuickItem_forceActiveFocusWithReason".}
proc fcQQuickItem_nextItemInFocusChain(self: pointer, ): pointer {.importc: "QQuickItem_nextItemInFocusChain".}
proc fcQQuickItem_childAt(self: pointer, x: float64, y: float64): pointer {.importc: "QQuickItem_childAt".}
proc fcQQuickItem_inputMethodQuery(self: pointer, query: cint): pointer {.importc: "QQuickItem_inputMethodQuery".}
proc fcQQuickItem_isTextureProvider(self: pointer, ): bool {.importc: "QQuickItem_isTextureProvider".}
proc fcQQuickItem_textureProvider(self: pointer, ): pointer {.importc: "QQuickItem_textureProvider".}
proc fcQQuickItem_update(self: pointer, ): void {.importc: "QQuickItem_update".}
proc fcQQuickItem_childrenRectChanged(self: pointer, param1: pointer): void {.importc: "QQuickItem_childrenRectChanged".}
proc fQQuickItem_connect_childrenRectChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_childrenRectChanged".}
proc fcQQuickItem_baselineOffsetChanged(self: pointer, param1: float64): void {.importc: "QQuickItem_baselineOffsetChanged".}
proc fQQuickItem_connect_baselineOffsetChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_baselineOffsetChanged".}
proc fcQQuickItem_stateChanged(self: pointer, param1: struct_miqt_string): void {.importc: "QQuickItem_stateChanged".}
proc fQQuickItem_connect_stateChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_stateChanged".}
proc fcQQuickItem_focusChanged(self: pointer, param1: bool): void {.importc: "QQuickItem_focusChanged".}
proc fQQuickItem_connect_focusChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_focusChanged".}
proc fcQQuickItem_activeFocusChanged(self: pointer, param1: bool): void {.importc: "QQuickItem_activeFocusChanged".}
proc fQQuickItem_connect_activeFocusChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_activeFocusChanged".}
proc fcQQuickItem_activeFocusOnTabChanged(self: pointer, param1: bool): void {.importc: "QQuickItem_activeFocusOnTabChanged".}
proc fQQuickItem_connect_activeFocusOnTabChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_activeFocusOnTabChanged".}
proc fcQQuickItem_parentChanged(self: pointer, param1: pointer): void {.importc: "QQuickItem_parentChanged".}
proc fQQuickItem_connect_parentChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_parentChanged".}
proc fcQQuickItem_transformOriginChanged(self: pointer, param1: cint): void {.importc: "QQuickItem_transformOriginChanged".}
proc fQQuickItem_connect_transformOriginChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_transformOriginChanged".}
proc fcQQuickItem_smoothChanged(self: pointer, param1: bool): void {.importc: "QQuickItem_smoothChanged".}
proc fQQuickItem_connect_smoothChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_smoothChanged".}
proc fcQQuickItem_antialiasingChanged(self: pointer, param1: bool): void {.importc: "QQuickItem_antialiasingChanged".}
proc fQQuickItem_connect_antialiasingChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_antialiasingChanged".}
proc fcQQuickItem_clipChanged(self: pointer, param1: bool): void {.importc: "QQuickItem_clipChanged".}
proc fQQuickItem_connect_clipChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_clipChanged".}
proc fcQQuickItem_windowChanged(self: pointer, window: pointer): void {.importc: "QQuickItem_windowChanged".}
proc fQQuickItem_connect_windowChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_windowChanged".}
proc fcQQuickItem_childrenChanged(self: pointer, ): void {.importc: "QQuickItem_childrenChanged".}
proc fQQuickItem_connect_childrenChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_childrenChanged".}
proc fcQQuickItem_opacityChanged(self: pointer, ): void {.importc: "QQuickItem_opacityChanged".}
proc fQQuickItem_connect_opacityChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_opacityChanged".}
proc fcQQuickItem_enabledChanged(self: pointer, ): void {.importc: "QQuickItem_enabledChanged".}
proc fQQuickItem_connect_enabledChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_enabledChanged".}
proc fcQQuickItem_visibleChanged(self: pointer, ): void {.importc: "QQuickItem_visibleChanged".}
proc fQQuickItem_connect_visibleChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_visibleChanged".}
proc fcQQuickItem_visibleChildrenChanged(self: pointer, ): void {.importc: "QQuickItem_visibleChildrenChanged".}
proc fQQuickItem_connect_visibleChildrenChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_visibleChildrenChanged".}
proc fcQQuickItem_rotationChanged(self: pointer, ): void {.importc: "QQuickItem_rotationChanged".}
proc fQQuickItem_connect_rotationChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_rotationChanged".}
proc fcQQuickItem_scaleChanged(self: pointer, ): void {.importc: "QQuickItem_scaleChanged".}
proc fQQuickItem_connect_scaleChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_scaleChanged".}
proc fcQQuickItem_xChanged(self: pointer, ): void {.importc: "QQuickItem_xChanged".}
proc fQQuickItem_connect_xChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_xChanged".}
proc fcQQuickItem_yChanged(self: pointer, ): void {.importc: "QQuickItem_yChanged".}
proc fQQuickItem_connect_yChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_yChanged".}
proc fcQQuickItem_widthChanged(self: pointer, ): void {.importc: "QQuickItem_widthChanged".}
proc fQQuickItem_connect_widthChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_widthChanged".}
proc fcQQuickItem_heightChanged(self: pointer, ): void {.importc: "QQuickItem_heightChanged".}
proc fQQuickItem_connect_heightChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_heightChanged".}
proc fcQQuickItem_zChanged(self: pointer, ): void {.importc: "QQuickItem_zChanged".}
proc fQQuickItem_connect_zChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_zChanged".}
proc fcQQuickItem_implicitWidthChanged(self: pointer, ): void {.importc: "QQuickItem_implicitWidthChanged".}
proc fQQuickItem_connect_implicitWidthChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_implicitWidthChanged".}
proc fcQQuickItem_implicitHeightChanged(self: pointer, ): void {.importc: "QQuickItem_implicitHeightChanged".}
proc fQQuickItem_connect_implicitHeightChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_implicitHeightChanged".}
proc fcQQuickItem_containmentMaskChanged(self: pointer, ): void {.importc: "QQuickItem_containmentMaskChanged".}
proc fQQuickItem_connect_containmentMaskChanged(self: pointer, slot: int) {.importc: "QQuickItem_connect_containmentMaskChanged".}
proc fcQQuickItem_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QQuickItem_tr2".}
proc fcQQuickItem_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QQuickItem_tr3".}
proc fcQQuickItem_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QQuickItem_trUtf82".}
proc fcQQuickItem_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QQuickItem_trUtf83".}
proc fcQQuickItem_setFlag2(self: pointer, flag: cint, enabled: bool): void {.importc: "QQuickItem_setFlag2".}
proc fcQQuickItem_grabToImage22(self: pointer, callback: pointer, targetSize: pointer): bool {.importc: "QQuickItem_grabToImage22".}
proc fcQQuickItem_nextItemInFocusChain1(self: pointer, forward: bool): pointer {.importc: "QQuickItem_nextItemInFocusChain1".}
proc fQQuickItem_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QQuickItem_virtualbase_metacall".}
proc fcQQuickItem_override_virtual_metacall(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_metacall".}
proc fQQuickItem_virtualbase_boundingRect(self: pointer, ): pointer{.importc: "QQuickItem_virtualbase_boundingRect".}
proc fcQQuickItem_override_virtual_boundingRect(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_boundingRect".}
proc fQQuickItem_virtualbase_clipRect(self: pointer, ): pointer{.importc: "QQuickItem_virtualbase_clipRect".}
proc fcQQuickItem_override_virtual_clipRect(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_clipRect".}
proc fQQuickItem_virtualbase_contains(self: pointer, point: pointer): bool{.importc: "QQuickItem_virtualbase_contains".}
proc fcQQuickItem_override_virtual_contains(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_contains".}
proc fQQuickItem_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QQuickItem_virtualbase_inputMethodQuery".}
